syntax = "proto3";

package user;

import "google/protobuf/struct.proto";

message UserServiceResponse {
    int32 statusCode = 1;
    string message = 2;
    google.protobuf.Struct data = 3;
}

// Create
message CreateUserRequest {
    string firstName = 1;
    string lastName = 2;
    string nickname = 3;
    string email = 4;
    string phone = 5;
    string password = 6;
    string avatar = 7;
}

message CreateUserResponse {
    UserServiceResponse data = 1;
}

// Get single user
message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    UserServiceResponse data = 1;
}

// List users
message ListUsersRequest {
    int32 page = 1;
    int32 pageSize = 2;
}

message ListUsersResponse {
    UserServiceResponse data = 1;
}

// Update
message UpdateUserRequest {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string nickname = 4;
    string email = 5;
    string phone = 6;
    string password = 7;
    string avatar = 8;
}

message UpdateUserResponse {
    UserServiceResponse data = 1;
}

// Delete
message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    UserServiceResponse data = 1;
}

// Service
service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
